--- a/styles.css
+++ b/styles.css
@@ -17,22 +17,18 @@ h1{
   }
 
 h2{
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-left: 30px;
-  padding-right: 30px;
   font-style: normal;
   font-weight: normal;
   font-family: sans-serif;
   font-size: 26px;
-  text-align: justify;
+  text-align: center;
 }
 
 h3{
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 100px;
+  padding-right: 200px;
   font-style: normal;
   font-weight: normal;
   font-family: sans-serif;
@@ -52,7 +48,7 @@ h3{
  ul {
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 200px;
+    padding-left: 100px;
     padding-right: 200px;
     list-style-type: none;
     font-style: normal;
